added first feff automator

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,45 @@
 *.lo
 *.o
 
+# Compiled binary
+main
+
 # Compiled Dynamic libraries
 *.so
 *.dylib
 
 # Compiled Static libraries
-*.lai
-*.la
-*.a
+*.acn
+*.acr
+*.alg
+*.aux
+*.bbl
+*.blg
+*.dvi
+*.fdb_latexmk
+*.glg
+*.glo
+*.gls
+*.idx
+*.ilg
+*.ind
+*.ist
+*.lof
+*.log
+*.lot
+*.maf
+*.mtc
+*.mtc0
+*.nav
+*.nlo
+*.out
+*.pdfsync
+*.ps
+*.snm
+*.synctex.gz
+*.toc
+*.vrb
+*.xdy
+*.tdo
+
+
