fixed seed directory

--- a/src/EXAFS-OEC/fitness.cfg
+++ b/src/EXAFS-OEC/fitness.cfg
@@ -2,7 +2,8 @@
 experimental-exafs: chi-s1.chi3
 target-atom: Mn
 exafs-atoms: Ca, Mn, C, O, N, H
-folder-name: /home/cprice/scratch
+#folder-name: /home/cprice/scratch
+folder-name: exafs
 
 # RMSD config 
 x-min: 1
@@ -13,8 +14,8 @@ feff: feff6
 ifeffit: ifeffit
 
 # VMD Settings
-pdb-file: relaxed-H.pdb
-#pdb-file: best_chromosome.pdb
+#pdb-file: relaxed-H.pdb
+pdb-file: best_chromosome.pdb
 amber-topology-file: prmtop-sphere
 namd2-path: namd2
 vmd-path: vmd
