added method to pdbhelper

--- a/src/EXAFS-OEC/fitness.cfg
+++ b/src/EXAFS-OEC/fitness.cfg
@@ -15,7 +15,10 @@ ifeffit: ifeffit
 
 # VMD Settings
 #pdb-file: relaxed-H.pdb
-pdb-file: best_chromosome.pdb
+#pdb-file: best_chromosome.pdb
+#pdb-file: best_chromosomes/4-chromosome.pdb
+#pdb-file: original.pdb
+pdb-file: minified.pdb
 amber-topology-file: prmtop-sphere
 namd2-path: namd2
 vmd-path: vmd
