--- a/src/EXAFS-OEC/fitness.cfg
+++ b/src/EXAFS-OEC/fitness.cfg
@@ -2,7 +2,7 @@
 experimental-exafs: chi-s1.chi3
 target-atom: Mn
 exafs-atoms: Ca, Mn, C, O, N, H
-#folder-name: /home/cprice/scratch
+#folder-name: exafs
 folder-name: exafs
 
 # RMSD config 
@@ -14,11 +14,11 @@ feff: feff6
 ifeffit: ifeffit
 
 # VMD Settings
-#pdb-file: relaxed-H.pdb
+pdb-file: relaxed-H.pdb
 #pdb-file: best_chromosome.pdb
 #pdb-file: best_chromosomes/4-chromosome.pdb
 #pdb-file: original.pdb
-pdb-file: minified.pdb
+#pdb-file: minified.pdb
 amber-topology-file: prmtop-sphere
 namd2-path: namd2
 vmd-path: vmd
