--- a/src/EXAFS-OEC/ga.cfg
+++ b/src/EXAFS-OEC/ga.cfg
@@ -11,14 +11,14 @@ population-size: 5
 elitism: true
 crossover: 0.8
 mutation: 0.2
-max-generations: 10
+max-generations: 1
 results: results.csv
 
 #seed: 1337
 xyz-files: benchmark/dft-qm-mm.xyz, benchmark/r-qm-mm.xyz, benchmark/dft-qm-mm2.xyz, benchmark/r-qm-mm2.xyz
 
 # solo, ga, xyz, indexes, index_ga
-eval-type: solo
+eval-type: index_ga
 pot-dir: best_chromosomes
 
 index-file: output.dcd.full.csv
