--- a/src/EXAFS-OEC/ga.cfg
+++ b/src/EXAFS-OEC/ga.cfg
@@ -18,7 +18,7 @@ results: results.csv
 xyz-files: benchmark/dft-qm-mm.xyz, benchmark/r-qm-mm.xyz, benchmark/dft-qm-mm2.xyz, benchmark/r-qm-mm2.xyz
 
 # solo, ga, xyz, indexes, index_ga
-eval-type: index_ga
+eval-type: solo
 pot-dir: best_chromosomes
 
 index-file: output.dcd.full.csv
