--- a/src/EXAFS-OEC/fitness.cfg
+++ b/src/EXAFS-OEC/fitness.cfg
@@ -14,8 +14,8 @@ feff: feff6
 ifeffit: ifeffit
 
 # VMD Settings
-#pdb-file: relaxed-H.pdb
-pdb-file: best_correct.pdb
+pdb-file: relaxed-H.pdb
+#pdb-file: best_correct.pdb
 #pdb-file: output.pdb
 #pdb-file: best_chromosomes/4-chromosome.pdb
 #pdb-file: original.pdb
