fixed ga_index. added moo_de.

--- a/src/EXAFS-OEC/ga.cfg
+++ b/src/EXAFS-OEC/ga.cfg
@@ -7,18 +7,25 @@ dcd-file: output.dcd.full
 # random required params: max-radius
 population-type: 0
 
-population-size: 10
+population-size: 20
 elitism: true
 crossover: 0.8
 mutation: 0.2
-max-generations: 2
+max-generations: 5
 results: results.csv
 
 #seed: 1337
 xyz-files: benchmark/dft-qm-mm.xyz, benchmark/r-qm-mm.xyz, benchmark/dft-qm-mm2.xyz, benchmark/r-qm-mm2.xyz
 
 # solo, ga, xyz, indexes, index_ga
-eval-type: index_ga
+
+pop-type: index
+algo-type: moo_de
+
+# eval-type: index_ga_recenter
+# eval-type: index_ga
+# eval-type: index_moo_de_recenter
+
 pot-dir: best_chromosomes
 
 index-file: output.dcd.full.csv
@@ -29,7 +36,6 @@ index-max: 710
 #index-max: 727
 
 recentering-population: 100
-keep-percentage: 0.2
 convergence-rate: 0.1
 recentering: 3
 
