--- a/src/EXAFS-OEC/ga.cfg
+++ b/src/EXAFS-OEC/ga.cfg
@@ -7,11 +7,11 @@ dcd-file: output.dcd.full
 # random required params: max-radius
 population-type: 0
 
-population-size: 20
+population-size: 5
 elitism: true
 crossover: 0.8
 mutation: 0.2
-max-generations: 5
+max-generations: 3
 results: results.csv
 
 #seed: 1337
@@ -20,7 +20,7 @@ xyz-files: benchmark/dft-qm-mm.xyz, benchmark/r-qm-mm.xyz, benchmark/dft-qm-mm2.
 # solo, ga, xyz, indexes, index_ga
 
 pop-type: index
-algo-type: moo_de
+algo-type: moo_pso
 
 # eval-type: index_ga_recenter
 # eval-type: index_ga
